--- a/spec/rails-app/Gemfile
+++ b/spec/rails-app/Gemfile
@@ -1,9 +1,12 @@
 source "https://rubygems.org"
 
-gem 'rails', '~> 5.1.4'
-gem 'rake', '~> 12.3'
-gem 'sqlite3', '~> 1.3.13'
-gem 'sass-rails', '~> 5.0'
-gem 'devise', '~> 4.0'
+gem 'byebug', '>= 0'
+gem 'coffee-rails', '~> 4.2'
+gem 'devise',       '~> 4.0'
 gem 'devise_password_policy_extension', path: '../..'
-gem 'rspec-rails', '~> 3.7'
+gem 'rails',        '~> 5.1.4'
+gem 'rake',         '~> 12.3'
+gem 'rspec-rails',  '~> 3.7'
+gem 'sass-rails',   '~> 5.0'
+gem 'sqlite3',      '~> 1.3.13'
+gem 'therubyracer', '~> 0.12.3', platforms: :ruby
