--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ Gemfile.lock
 .rspec_status
 /spec/reports/
 /spec/examples.txt
+/spec/rails-app/.bundle/
 /spec/rails-app/db/*.sqlite3
 /spec/rails-app/log/*.log
 /spec/rails-app/bin/
