--- a/Dockerfile.prev
+++ b/Dockerfile.prev
@@ -1,12 +1,13 @@
 #
-# Dockerfile for devise_password_policy_extension
+# Dockerfile for devise-secure_password
 #
-# prompt> docker run -it dppe-dev
-# prompt> pushd . && cd spec/rails-app
-# prompt> gem install bundler && bundle install --jobs 20 --retry 5
+# prompt> docker run -it secure-password-dev
+# prompt> pushd . && cd spec/rails-app-X_y_z
+# prompt> gem install bundler && RAILS_TARGET=X.y.z bundle install --jobs 20 --retry 5
+# prompt> RAILS_ENV='test' bundle exec rake db:migrate
 # prompt> popd
-# prompt> gem install bundler && bundle install --jobs 20 --retry 5
-# prompt> rake spec
+# prompt> gem install bundler && RAILS_TARGET=X.y.z bundle install --jobs 20 --retry 5
+# prompt> RAILS_TARGET=X.y.z bundle exec rake test:spec
 #
 # NOTE: The order in which you run 'bundle install' in spec/rails and then in
 # the top directory is important.
@@ -14,7 +15,7 @@
 FROM circleci/ruby:2.4.3-browsers
 LABEL maintainer="Mark Eissler <mark.eissler@valimail.com>"
 
-ENV BUILD_HOME='/dppe-gem'
+ENV BUILD_HOME='/secure-password-gem'
 
 # Configure the main working directory. This is the base directory used in any
 # further RUN, COPY, and ENTRYPOINT commands.
