--- a/spec/rails-app-5_1_4/Gemfile
+++ b/spec/rails-app-5_1_4/Gemfile
@@ -2,7 +2,7 @@ source 'https://rubygems.org'
 
 gem 'coffee-rails', '~> 4.2'
 gem 'devise',       '~> 4.0'
-gem 'devise_password_policy_extension', path: '../..'
+gem 'devise-secure_password', path: '../..'
 gem 'rails',        '~> 5.1.4'
 gem 'rake',         '~> 12.3'
 gem 'rspec-rails',  '~> 3.7'
