--- a/Dockerfile.prev
+++ b/Dockerfile.prev
@@ -1,8 +1,8 @@
 #
 # Dockerfile for devise-secure_password
 #
-# prompt> docker build -t secure-password-dev .
-# prompt> docker run -it secure-password-dev /bin/bash
+# prompt> docker build -f Dockerfile.prev -t secure-password-dev-prev .
+# prompt> docker run -it secure-password-dev-prev /bin/bash
 # prompt> pushd . && cd spec/rails-app-X_y_z
 # prompt> gem install bundler && RAILS_TARGET=X.y.z bundle install --jobs 20 --retry 5
 # prompt> RAILS_ENV='test' bundle exec rake db:migrate
@@ -13,7 +13,7 @@
 # NOTE: The order in which you run 'bundle install' in spec/rails and then in
 # the top directory is important.
 #
-FROM circleci/ruby:2.4.3-browsers
+FROM circleci/ruby:2.4.4-browsers
 LABEL maintainer="Mark Eissler <mark.eissler@valimail.com>"
 
 ENV BUILD_HOME='/secure-password-gem'
