--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 #
 # Check https://circleci.com/docs/2.0/language-ruby/ for more details
 #
-version: 2
+version: 2.1
 aliases:
   - &current_rails_gemfile
     gemfiles/rails_6_1.gemfile
@@ -80,6 +80,9 @@ aliases:
       path: coverage
       destination: coverage
 
+orbs:
+  browser-tools: circleci/browser-tools@1.1.3
+
 jobs:
   code-quality-job:
     <<: *defaults
@@ -106,6 +109,8 @@ jobs:
           BUNDLE_GEMFILE: *current_rails_gemfile
     steps: &rails_steps
       - checkout
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
       - *step_install_root_dependencies
       - *step_make_test_output_directory
       - *step_run_rspec_tests
@@ -140,19 +145,18 @@ jobs:
     steps: *rails_steps
 
 workflows:
-    version: 2
-    build-test_current-ruby:
-      jobs:
-        - current_rails-current_ruby-job
-        - previous_rails-current_ruby-job:
-            requires:
-              - current_rails-current_ruby-job # let primary job fetch all dependencies first
-        - code-quality-job:
-            requires:
-              - current_rails-current_ruby-job # let primary job fetch all dependencies first
-    build-test_previous-ruby:
-      jobs:
-        - current_rails-previous_ruby-job
-        - previous_rails-previous_ruby-job:
-            requires:
-              - current_rails-previous_ruby-job
+  build-test_current-ruby:
+    jobs:
+      - current_rails-current_ruby-job
+      - previous_rails-current_ruby-job:
+          requires:
+            - current_rails-current_ruby-job # let primary job fetch all dependencies first
+      - code-quality-job:
+          requires:
+            - current_rails-current_ruby-job # let primary job fetch all dependencies first
+  build-test_previous-ruby:
+    jobs:
+      - current_rails-previous_ruby-job
+      - previous_rails-previous_ruby-job:
+          requires:
+            - current_rails-previous_ruby-job
