Add dummy app for Rails 7.0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -88,3 +88,6 @@ Style/RedundantRegexpEscape:
   Enabled: true
 Style/SlicingWithRange:
   Enabled: true
+
+Gemspec/DevelopmentDependencies:
+  Enabled: no
