--- a/spec/rails-app-6_0/package.json
+++ b/spec/rails-app-6_0/package.json
@@ -13,6 +13,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "resolutions": {
-    "@babel/traverse": "^7.24.7"
+    "@babel/traverse": "^7.24.7",
+    "eventsource": "^1.1.1"
   }
 }
