--- a/spec/rails-app-6_0/package.json
+++ b/spec/rails-app-6_0/package.json
@@ -14,6 +14,7 @@
   },
   "resolutions": {
     "@babel/traverse": "^7.24.7",
-    "eventsource": "^1.1.1"
+    "eventsource": "^1.1.1",
+    "json-schema": "^0.4.0"
   }
 }
